bugfix: editable - text-align: left while editable - make sure field has fixed width (not only min/max-width)

--- a/editable/css/editable.css
+++ b/editable/css/editable.css
@@ -13,8 +13,8 @@
 	position: relative;
 	overflow: hidden;
 	min-width: 8em;
-	white-space: pre-wrap;
 	min-height: 1.7em;
+	white-space: pre-wrap;
 	background: #eff;
 	background: var(--lzy-editable-bg, transparent);
 	border: 1px solid #ddd;
@@ -31,6 +31,7 @@ td.lzy-editable.lzy-editable {
 }
 #lzy .lzy-editable-active {
 	padding: 0;
+	text-align: left;
 }
 .lzy-editable-multiline textarea,
 .lzy-editable-active textarea,
@@ -39,6 +40,7 @@ td.lzy-editable.lzy-editable {
 	background: var(--lzy-editable-bg-active, #efe);
 	width: 100%;
 	height: 100%;
+	text-align: left;
 	border: 0 solid transparent;
 	padding: 4px 8px;
 	padding-left: var(--lzy-editable-padding-x, 8px);
